# app/serializers/api/v1/class_credit_serializer.rb
@@ -1,5 +1,11 @@
 class Api::V1::ClassCreditSerializer < ActiveModel::Serializer
-  attributes :id, :user_id, :reservation_id, :status, :used_at
-  belongs_to :user, serializer: Api::V1::UsersSerializer
-  belongs_to :reservation, serializer: Api::V1::ReservationSerializer
+  attributes :id, :user_id, :reservation_id, :status, :used_at, :user_email, :reservation_id
+
+  def user_email
+    object.user.email
+  end
+
+  def reservation_id
+    object.reservation ? object.reservation.id : nil
+  end
 end
